styles/index.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');




*{
    padding:0;
    margin: 0;
}

:root{
    --nav-font-size:2rem;
    --logo-font-size:3rem;
    --nav-gap:1rem;
    --card-title-padding:1.25rem 2rem;
    --card-body-padding: 1rem 2rem;
    --font-size-logo: 2rem;
    --card-body-font-size: 1.5rem;
    --card-title-font-size: 2.25rem;
}




nav{
    font-family: 'Roboto Condensed', sans-serif;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    /* border: 1px solid red; */
    gap:2rem;
    padding:  .75rem 3rem;
    width: 100%;
    overflow:hidden;
    box-sizing: border-box;
    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
    height: 10vh;
}

nav > .nav-item{
    
    display: flex;
    align-items: center;
    justify-content: center;
    gap:var(--nav-gap);
    font-size: var(--nav-font-size);
    
}

.nav-inner-container{
    
    display: flex;
    justify-content: center;
    align-items: center;
}

.nav-font-size{
    font-size: var(--nav-font-size);
}

nav .logo{
    font-size: var(--logo-font-size);
    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
}


.hero{
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 5rem 2rem;
    /* border: 1px solid red; */
    height: 100%;
    flex-direction: column;
    gap:2rem;
}

.hero > a{
    text-decoration: none;
    color: inherit;
}

.card{
    /* border: 1px solid red; */
    width: 60vw;
    height: 30vh;
    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
    transition: box-shadow .5s;
    display: flex;
    flex-direction: column;
    
}

.special-card{
    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px !important;
    
}

.special-card:hover{
    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px !important;

}

.card:hover{
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
}

.card > .card-title{
    font-size: var(--card-title-font-size);
    padding:var(--card-title-padding);
}



.card > .card-body{
    font-size: 1rem;
    padding:var(--card-body-padding);
    font-size: var(--card-body-font-size);

}

.card > .start-icon{
    flex-grow: 1;
   
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    padding: 1rem;
    align-items: flex-end;
    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
    
    
}

.start-icon-logo{
    font-size: var(--font-size-logo);
}

code{
    background-color: rgba(222,222,222,0.3);
}

a{
    text-decoration: none;
    color: inherit;
    /* font-size: var(--logo-font-size); */
}


@media only screen and (max-width: 600px) {
    :root{
        --nav-font-size:1.4rem;
        --logo-font-size:2.5rem;
        --nav-gap:.25rem;
        --card-title-padding:1rem .75rem;
        --card-body-padding:1rem .75rem;
        /* --font-size-logo: 1rem; */
    }
    nav {
        padding:.75rem .5rem;
        height: 12vh;
    }

    .card{
        width: 85vw;
        height: fit-content;

    }

    
  }

